
add_subdirectory(eryadmin)
add_subdirectory(erydbDB)
add_subdirectory(postConfigure)
add_subdirectory(serverMonitor)
add_subdirectory(traphandler)
add_subdirectory(sendtrap)
add_subdirectory(erydbSupport)
add_subdirectory(licenseBuild)
#add_subdirectory(hardwareMonitor)
#add_subdirectory(resourceMonitor)
add_subdirectory(replayTransactionLog)


