
#add_subdirectory(boost_erydb)
add_subdirectory(liblicense)
add_subdirectory(startup)
add_subdirectory(common)
add_subdirectory(configcpp)
add_subdirectory(loggingcpp)
add_subdirectory(messageqcpp)
add_subdirectory(threadpool)
add_subdirectory(rwlock)
add_subdirectory(dataconvert)
add_subdirectory(joiner)
add_subdirectory(rowgroup)
add_subdirectory(cacheutils)
add_subdirectory(funcexp)
add_subdirectory(udfsdk)
add_subdirectory(compress)
add_subdirectory(batchloader)
add_subdirectory(ddlcleanup)
add_subdirectory(mysqlcl_erydb)
add_subdirectory(querystats)
add_subdirectory(windowfunction)
add_subdirectory(erydbdatafile)
add_subdirectory(erydbhdfs)
add_subdirectory(winport)
add_subdirectory(thrift)
add_subdirectory(querytele)

