# Copyright (C) 2014 EryDB, Inc.
#
# This program is free software; you can redistribute it and/or
# modify it under the terms of the GNU General Public License
# as published by the Free Software Foundation; version 2 of
# the License.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
# MA 02110-1301, USA.

bin_SCRIPTS = post-install pre-uninstall remote_command.sh \
erydbLogRotate transactionLog transactionLogArchiver.sh \
module_installer.sh startupTests.sh \
user_installer.sh performance_installer.sh \
remote_scp_get.sh erydbAlias run.sh upgrade-erydb.sh \
post-mysql-install post-mysqld-install binary_installer.sh \
os_check.sh erydbSyslog erydbSyslog-ng syslogSetup.sh \
remote_scp_put.sh erydbUninstall.sh erydb.def \
remotessh.exp rsync.sh remote_command_verify.sh \
erydb.conf erydbSyslog7 master-rep-erydb.sh \
slave-rep-erydb.sh disable-rep-erydb.sh \
myCnf-include-args.text myCnf-exclude-args.text erydb.service 

dist_local_DATA = module

test:

coverage:

leakcheck:

docs:

bootstrap: install-data-am

